--- a/devtools/conda-envs/test_env.yaml
+++ b/devtools/conda-envs/test_env.yaml
@@ -29,9 +29,11 @@ dependencies:
     # JSON caching of residue templates
   - tinydb
 
-    # openforcefield toolkit and force fields
-  - openforcefield >=0.7.1
-  - openforcefields >=1.2.0
+    # OpenFF toolkit and force fields
+  - openff-toolkit >=0.10.3|<=0.10.0
+  - openff-forcefields >=1.2.0
+  - pip:
+    - git+https://github.com/openforcefield/openff-toolkit.git@topology-biopolymer-refactor
 
     # OpenEye toolkits are only used to speed up testing; they are not required for use
   - openeye-toolkits
