--- a/devtools/conda-envs/test_env.yaml
+++ b/devtools/conda-envs/test_env.yaml
@@ -47,5 +47,4 @@ dependencies:
   - qcportal >=0.15.0
 
   - pip:
-      #- git+https://github.com/choderalab/espaloma.git@0.2.1
-      - git+https://github.com/choderalab/espaloma.git
+      - git+https://github.com/choderalab/espaloma.git@0.2.2
