--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -39,7 +39,7 @@ jobs:
         environment-file: devtools/conda-envs/test_env.yaml
         mamba-version: "*"
         channel-priority: true
-        channels: conda-forge,openeye,defaults
+        channels: jaimergp/label/unsupported-cudatoolkit-shim,conda-forge,openeye,defaults
         activate-environment: test
         auto-update-conda: true
         auto-activate-base: false
