--- a/devtools/conda-envs/test_env.yaml
+++ b/devtools/conda-envs/test_env.yaml
@@ -43,6 +43,7 @@ dependencies:
     # TODO: Rework this once espaloma is on conda-forge
     #
   - pytorch
+  - torch>=1.8.0
   - dgl
   - qcportal >=0.15.0
 
