--- a/devtools/conda-envs/test_env.yaml
+++ b/devtools/conda-envs/test_env.yaml
@@ -42,8 +42,7 @@ dependencies:
     # Espaloma requirements below
     # TODO: Rework this once espaloma is on conda-forge
     #
-  - pytorch
-  - torch>=1.8.0
+  - pytorch >=1.8.0
   - dgl
   - qcportal >=0.15.0
 
