--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -17,7 +17,7 @@ concurrency:
 jobs:
   test:
 
-    name: Test on ${{ matrix.os }}, Python ${{ matrix.python-version }}
+    name: Test on ${{ matrix.os }}, Python ${{ matrix.python-version }}, Latest openff-toolkit: ${{ matrix.latest-openff-toolkit }}
     runs-on: ${{ matrix.os }}
 
     strategy:
@@ -25,6 +25,7 @@ jobs:
       matrix:
         os: [ubuntu-latest, macOS-latest]
         python-version: [3.7, 3.8, 3.9]
+        latest-openff-toolkit: ["true", "false"]
 
     steps:
     - uses: actions/checkout@v2
@@ -41,6 +42,11 @@ jobs:
         auto-update-conda: true
         auto-activate-base: false
         show-channel-urls: true
+
+    - name: "Install latest openff-toolkit"
+      if: ${{ matrix.latest-openff-toolkit }}
+      run: |
+        mamba update -y -c conda-forge/label/openff-toolkit_rc openff-toolkit
 
 
     - name: Install Package
