Try to ensure bash args thing is passed through

--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -14,6 +14,10 @@ concurrency:
   group: "${{ github.workflow }}-${{ github.ref }}"
   cancel-in-progress: true
 
+defaults:
+  run:
+    shell: bash -l {0}
+
 jobs:
   test:
     name: Test on ${{ matrix.os }}, Python ${{ matrix.python-version }}, Latest openff-toolkit ${{ matrix.latest-openff-toolkit }}
@@ -47,19 +51,16 @@ jobs:
         mamba update -y -c conda-forge/label/openff-toolkit_rc -c conda-forge/label/openff-interchange_rc "openff-toolkit >=0.11.0rc1"
 
     - name: Install Package
-      shell: bash -l {0}
       run: |
         # Can't use 'develop' mode because we remove symlinks after install is complete
         python setup.py install
 
     - name: Conda Environment Information
-      shell: bash -l {0}
       run: |
         conda info
         conda list
 
     - name: Test Installed Package
-      shell: bash -l {0}
       run: |
         pytest -v -x -s --log-cli-level $LOGLEVEL --cov=openmmforcefields openmmforcefields/tests/test_amber_import.py
         pytest -v -x -s --log-cli-level $LOGLEVEL --cov=openmmforcefields openmmforcefields/tests/test_template_generators.py
@@ -69,13 +70,11 @@ jobs:
         KMP_DUPLICATE_LIB_OK: "True"
 
     - name: Test AMBER conversion
-      shell: bash -l {0}
       run: |
         python convert_amber.py --input gaff.yaml --log gaff-tests.csv --verbose
       working-directory: ./amber
 
     - name: Test CHARMM conversion
-      shell: bash -l {0}
       run: |
 
         # TODO: Uncomment these tests when new ParmEd is released
