--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -26,8 +26,11 @@ jobs:
       fail-fast: false
       matrix:
         os: [ubuntu-latest, macOS-latest]
-        python-version: [3.7, 3.8, 3.9]
+        python-version: ["3.8", "3.9", "3.10"]
         latest-openff-toolkit: ["true", "false"]
+        exclude:
+          - os: macOS-latest
+            python-version: "3.10"
 
     steps:
     - uses: actions/checkout@v2
