add back in openeye toolkit

--- a/devtools/conda-envs/test_env.yaml
+++ b/devtools/conda-envs/test_env.yaml
@@ -4,6 +4,7 @@ channels:
   - conda-forge
   - dglteam # espaloma; TODO: Remove this once espaloma is fully on conda-forge
   - defaults
+  - openeye
 
 dependencies:
     # Base depends
@@ -26,6 +27,8 @@ dependencies:
 
     # JSON caching of residue templates
   - tinydb
+    # OpenEye toolkits are only used to speed up testing; they are not required for use
+  - openeye-toolkits
 
     # OpenFF toolkit and force fields
   - openff-toolkit >=0.10.3|<=0.10.0
