--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -18,6 +18,8 @@ jobs:
   test:
     name: Test on ${{ matrix.os }}, Python ${{ matrix.python-version }}, Latest openff-toolkit ${{ matrix.latest-openff-toolkit }}
     runs-on: ${{ matrix.os }}
+    env:
+      OE_LICENSE: ${{ github.workspace }}/oe_license.txt
     strategy:
       fail-fast: false
       matrix:
@@ -35,17 +37,24 @@ jobs:
         environment-file: devtools/conda-envs/test_env.yaml
         mamba-version: "*"
         channel-priority: true
-        channels: jaimergp/label/unsupported-cudatoolkit-shim,conda-forge,defaults
+        channels: jaimergp/label/unsupported-cudatoolkit-shim,conda-forge,openeye
         activate-environment: test
         auto-update-conda: true
         auto-activate-base: false
         show-channel-urls: true
 
+    - name: License OpenEye
+      shell: bash -l {0}
+      run: |
+        echo "${SECRET_OE_LICENSE}" > ${OE_LICENSE}
+        python -c "from openeye import oechem; assert oechem.OEChemIsLicensed()"
+      env:
+        SECRET_OE_LICENSE: ${{ secrets.OE_LICENSE }}
+
     - name: "Install latest openff-toolkit"
       if: ${{ matrix.latest-openff-toolkit }}
       run: |
         mamba update -y -c conda-forge/label/openff-toolkit_rc openff-toolkit
-
 
     - name: Install Package
       shell: bash -l {0}
