Do not install Espaloma

--- a/devtools/conda-envs/test_env.yaml
+++ b/devtools/conda-envs/test_env.yaml
@@ -38,7 +38,7 @@ dependencies:
     # Espaloma requirements below
     # TODO: Rework this once espaloma is on conda-forge
     #
-  - pytorch >=1.8.0
-  - dgl
-  - qcportal >=0.15.0
-  - espaloma
+  # pytorch >=1.8.0
+  # dgl
+  # qcportal >=0.15.0
+  # espaloma
