--- a/devtools/conda-envs/test_env.yaml
+++ b/devtools/conda-envs/test_env.yaml
@@ -31,7 +31,7 @@ dependencies:
   - openeye-toolkits
 
     # OpenFF toolkit and force fields
-  - openff-toolkit >=0.10.3|<=0.10.0
+  - openff-toolkit >=0.10.3,<=0.11.0  # Versions 0.10.1 and 0.10.2 are bugged, but 0.11.0 breaks API
   - openff-forcefields >=1.2.0
 
     # Validating URLs
