Switch to micromamba for setting up conda environment
Add boilerplate `.gitignore` file

Do not pull from non-standard labels

Install instead of update

Try to figure out why if: {{ false }} still triggers

Syntax?

Tinker

Bring in (full) mamba

Bash thing everywhere

Bring down old toolkit

Do not present un-loadable ff14SB port as available

More pins

--- a/devtools/conda-envs/test_env.yaml
+++ b/devtools/conda-envs/test_env.yaml
@@ -4,6 +4,7 @@ channels:
   - conda-forge
   - dglteam # espaloma; TODO: Remove this once espaloma is fully on conda-forge
   - defaults
+  - openeye
 
 dependencies:
     # Base depends
@@ -26,9 +27,11 @@ dependencies:
 
     # JSON caching of residue templates
   - tinydb
+    # OpenEye toolkits are only used to speed up testing; they are not required for use
+  - openeye-toolkits
 
     # OpenFF toolkit and force fields
-  - openff-toolkit >=0.10.3|<=0.10.0
+  - openff-toolkit =0.10.6
   - openff-forcefields >=1.2.0
 
     # Validating URLs
