Tweak CI: Switch to Micromamba, pin to supported OpenFF Toolkit versions (#232)
* Switch to micromamba for setting up conda environment

Add boilerplate `.gitignore` file

Do not pull from non-standard labels

Install instead of update

Try to figure out why if: {{ false }} still triggers

Syntax?

Tinker

Bring in (full) mamba

Bash thing everywhere

Bring down old toolkit

Do not present un-loadable ff14SB port as available

More pins

* Drop 3.7, add 3.10

Co-authored-by: Mike Henry <11765982+mikemhenry@users.noreply.github.com>

--- a/devtools/conda-envs/test_env.yaml
+++ b/devtools/conda-envs/test_env.yaml
@@ -31,7 +31,7 @@ dependencies:
   - openeye-toolkits
 
     # OpenFF toolkit and force fields
-  - openff-toolkit >=0.10.3|<=0.10.0
+  - openff-toolkit =0.10.6
   - openff-forcefields >=1.2.0
 
     # Validating URLs
