--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -30,6 +30,9 @@ jobs:
         os: [ubuntu-latest, macOS-latest]
         python-version: ["3.8", "3.9", "3.10"]
         latest-openff-toolkit: [true, false]
+        exclude:
+          - python-version: "3.10"
+            os: macOS-latest
 
     steps:
     - uses: actions/checkout@v2
