--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -27,12 +27,12 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        os: [ubuntu-latest, macOS-latest]
+        os: [ubuntu-latest, macos-latest]
         python-version: ["3.8", "3.9", "3.10"]
         latest-openff-toolkit: [true, false]
         exclude:
           - python-version: "3.10"
-            os: macOS-latest
+            os: macos-latest
 
     steps:
     - uses: actions/checkout@v3
