--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -73,7 +73,7 @@ jobs:
 
     - name: Test Installed Package
       run: |
-        pytest -v -x --log-cli-level $LOGLEVEL --cov=openmmforcefields --durations=20 -nauto --cov-append --cov-report=xml \
+        pytest -v -x --log-cli-level $LOGLEVEL --cov=openmmforcefields --durations=20 --cov-append --cov-report=xml \
           openmmforcefields/tests/test_amber_import.py \
           openmmforcefields/tests/test_template_generators.py \
           openmmforcefields/tests/test_system_generator.py
