--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -104,7 +104,7 @@ jobs:
       uses: actions/upload-artifact@v3
       with:
         name: coverage-data
-        path: ".coverage.*"
+        path: coverage.xml
         if-no-files-found: ignore
 
     - name: Download coverage data.
