Switch back to codecov

--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -100,27 +100,9 @@ jobs:
 
       working-directory: ./charmm
 
-    - name: Upload coverage data
-      uses: actions/upload-artifact@v3
+    - name: Codecov
+      uses: codecov/codecov-action@v3.1.0
       with:
-        name: coverage-data
-        path: coverage.xml
-        if-no-files-found: ignore
-
-    - name: Download coverage data.
-      uses: actions/download-artifact@v2
-      with:
-        name: coverage-data
-
-    - name: Combine coverage & fail if it's <100%.
-      run: |
-        python -m coverage html --skip-covered --skip-empty
-        python -m coverage report --fail-under=70
-        python -m coverage report --fail-under=100
-
-    - name: Upload HTML report if check failed.
-      uses: actions/upload-artifact@v2
-      with:
-        name: html-report
-        path: htmlcov
-      if: ${{ failure() }}
+        token: ${{ secrets.CODECOV_TOKEN }}
+        file: ./coverage.xml
+        fail_ci_if_error: true
