--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -73,11 +73,12 @@ jobs:
 
     - name: Test Installed Package
       run: |
-        pytest -v -x --log-cli-level $LOGLEVEL --cov=openmmforcefields --durations=20 --cov-append --cov-report=xml \
+        pytest -v -x --log-cli-level $LOGLEVEL $COV_ARGS \
           openmmforcefields/tests/test_amber_import.py \
           openmmforcefields/tests/test_template_generators.py \
           openmmforcefields/tests/test_system_generator.py
       env:
+        COV_ARGS: --cov=openmmforcefields --cov-config=setup.cfg --cov-append --cov-report=xml
         LOGLEVEL: "INFO"
         KMP_DUPLICATE_LIB_OK: "True"
 
