make sure we don't pull in a really old version of the toolkit

--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -57,10 +57,10 @@ jobs:
       run: |
         micromamba update -y -c conda-forge "openff-toolkit >=0.11.0"
 
-    - name: "Install latest openff-toolkit"
+    - name: "Install the older  openff-toolkit"
       if: ${{ matrix.latest-openff-toolkit == false }}
       run: |
-        micromamba update -y -c conda-forge "openff-toolkit <0.11.0"
+        micromamba -y -c conda-forge "openff-toolkit==0.10.6" "openff-toolkit-base==0.10.6"
 
     - name: Install Package
       run: |
