forgot to add a verb there

--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -60,7 +60,7 @@ jobs:
     - name: "Install the older  openff-toolkit"
       if: ${{ matrix.latest-openff-toolkit == false }}
       run: |
-        micromamba -y -c conda-forge "openff-toolkit==0.10.6" "openff-toolkit-base==0.10.6"
+        micromamba install -y -c conda-forge "openff-toolkit==0.10.6" "openff-toolkit-base==0.10.6"
 
     - name: Install Package
       run: |
