--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -77,7 +77,7 @@ jobs:
 
     - name: Test Installed Package
       run: |
-        pytest -v --log-cli-level $LOGLEVEL $COV_ARGS --durations=20 \
+        pytest -v -x --log-cli-level $LOGLEVEL $COV_ARGS --durations=20 \
           openmmforcefields/tests/test_amber_import.py \
           openmmforcefields/tests/test_template_generators.py \
           openmmforcefields/tests/test_system_generator.py
