make sure we don't install the newest toolkit by mistake (#237)
* make sure we don't install the newest toolkit by mistake

* make sure we don't pull in a really old version of the toolkit

* forgot to add a verb there

* Start to make internals compatible with both unit packages

* Try different logic

* Improve logic in test

* Fix some tests

* Fix

* Fix

* Better units logic in tests

* Remove temporary code

* That's too semantic a variable name

Co-authored-by: Matthew W. Thompson <mattwthompson@protonmail.com>

--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -57,6 +57,11 @@ jobs:
       run: |
         micromamba update -y -c conda-forge "openff-toolkit >=0.11.0"
 
+    - name: "Install the older  openff-toolkit"
+      if: ${{ matrix.latest-openff-toolkit == false }}
+      run: |
+        micromamba install -y -c conda-forge "openff-toolkit==0.10.6" "openff-toolkit-base==0.10.6"
+
     - name: Install Package
       run: |
         pip list
