--- a/devtools/conda-envs/test_env.yaml
+++ b/devtools/conda-envs/test_env.yaml
@@ -20,6 +20,7 @@ dependencies:
   - openmm >=7.6.0
 
   - openff-units >=0.1.8
+  - openff-amber-ff-ports >=0.0.3
 
     # Requirements for conversion tools
   - pyyaml
