Pin openff-toolkit >=0.11.3 due to bug noted in https://github.com/openmm/openmmforcefields/pull/253#issuecomment-1332933319

--- a/devtools/conda-envs/test_env.yaml
+++ b/devtools/conda-envs/test_env.yaml
@@ -21,6 +21,7 @@ dependencies:
 
   - openff-units >=0.1.8
   - openff-amber-ff-ports >=0.0.3
+  - openff-toolkit >=0.11.3
 
     # Requirements for conversion tools
   - pyyaml
