--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -38,10 +38,10 @@ jobs:
     - uses: actions/checkout@v3
 
     - name: Setup Conda Environment
-      uses: mamba-org/provision-with-micromamba@main
+      uses: mamba-org/setup-micromamba@v1
       with:
         environment-file: devtools/conda-envs/test_env.yaml
-        extra-specs: |
+        create-args: >-
           python=${{ matrix.python-version }}
 
     - name: License OpenEye
