--- a/devtools/conda-envs/test_env.yaml
+++ b/devtools/conda-envs/test_env.yaml
@@ -19,8 +19,7 @@ dependencies:
     # Requirements for converted force field installer
   - openmm >=7.6.0
 
-  - openff-units >=0.1.8
-  - openff-amber-ff-ports >=0.0.3
+  - openff-toolkit >=0.11
 
     # Requirements for conversion tools
   - pyyaml
