--- a/.github/workflows/espaloma_ci.yaml
+++ b/.github/workflows/espaloma_ci.yaml
@@ -79,45 +79,9 @@ jobs:
       if: always()
       run: |
         pytest -v --log-cli-level $LOGLEVEL $COV_ARGS --durations=20 \
-          openmmforcefields/tests/test_amber_import.py \
-          openmmforcefields/tests/test_template_generators.py \
-          openmmforcefields/tests/test_system_generator.py \
-          -k "not TestEspalomaTemplateGenerator"
+          -k "TestEspalomaTemplateGenerator"
       env:
         COV_ARGS: --cov=openmmforcefields --cov-config=setup.cfg --cov-append --cov-report=xml
         LOGLEVEL: "INFO"
         KMP_DUPLICATE_LIB_OK: "True"
 
-    - name: Test AMBER conversion
-      run: |
-        python convert_amber.py --input gaff.yaml --log gaff-tests.csv --verbose
-      working-directory: ./amber
-
-    - name: Test CHARMM conversion
-      run: |
-
-        # TODO: Uncomment these tests when new ParmEd is released
-        # TODO: Find a way to avoid timing out when running full charmm36.yaml conversion below
-        # python convert_charmm.py --verbose --in files/waters.yaml && python convert_charmm.py --verbose --in files/charmm36.yaml
-        # python convert_charmm.py --verbose --in files/waters.yaml
-        # python convert_charmm.py --verbose
-
-        # TODO: Uncomment this when tests are expected to work
-        # python test_charmm.py --verbose
-
-      working-directory: ./charmm
-
-    - name: Run docstrings
-      if: ${{ matrix.latest-openff-toolkit == true }}
-      continue-on-error: True
-      run: |
-        pytest --doctest-modules openmmforcefields --ignore=openmmforcefields/tests
-
-    - name: Upload coverage report to CodeCov
-      uses: codecov/codecov-action@v3.1.1
-      if: ${{ github.repository == 'openmm/openmmforcefields'
-              && github.event != 'schedule' }}
-      with:
-        token: ${{ secrets.CODECOV_TOKEN }}
-        file: ./coverage.xml
-        fail_ci_if_error: true
