--- a/.github/workflows/espaloma_ci.yaml
+++ b/.github/workflows/espaloma_ci.yaml
@@ -59,7 +59,7 @@ jobs:
     - name: Test Installed Package
       run: |
         pytest -v --log-cli-level $LOGLEVEL $COV_ARGS --durations=20 \
-          -m "espaloma" openmmforcefields/tests
+          -m "espaloma" openmmforcefields/tests --runespaloma
       env:
         COV_ARGS: --cov=openmmforcefields --cov-config=setup.cfg --cov-append --cov-report=xml
         LOGLEVEL: "INFO"
