--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -20,7 +20,7 @@ concurrency:
 
 jobs:
   test:
-    name: Test on ${{ matrix.os }}, Python ${{ matrix.python-version }}, Latest openff-toolkit ${{ matrix.latest-openff-toolkit }}
+    name: Test on ${{ matrix.os }}, Python ${{ matrix.python-version }}
     runs-on: ${{ matrix.os }}
     env:
       OE_LICENSE: ${{ github.workspace }}/oe_license.txt
@@ -28,8 +28,7 @@ jobs:
       fail-fast: false
       matrix:
         os: [ubuntu-latest, macos-latest]
-        python-version: ["3.8", "3.9", "3.10"]
-        latest-openff-toolkit: [true, false]
+        python-version: ["3.9", "3.10"]  # Add 3.11 in with AmberTools 23
         exclude:
           - python-version: "3.10"
             os: macos-latest
@@ -52,16 +51,6 @@ jobs:
       env:
         SECRET_OE_LICENSE: ${{ secrets.OE_LICENSE }}
 
-    - name: "Install openff-toolkit >= 0.11 API changes"
-      if: ${{ matrix.latest-openff-toolkit == true }}
-      run: |
-        micromamba update -y -c conda-forge "openff-toolkit >=0.11.3"
-
-    - name: "Install openff-toolkit <  0.11 API changes"
-      if: ${{ matrix.latest-openff-toolkit == false }}
-      run: |
-        micromamba install -y -c conda-forge "openff-toolkit==0.10.6" "openff-toolkit-base==0.10.6"
-
     - name: Install Package
       run: |
         pip list
@@ -77,10 +66,11 @@ jobs:
 
     - name: Test Installed Package
       run: |
-        pytest -v -x --log-cli-level $LOGLEVEL $COV_ARGS --durations=20 \
+        pytest -v --log-cli-level $LOGLEVEL $COV_ARGS --durations=20 \
           openmmforcefields/tests/test_amber_import.py \
           openmmforcefields/tests/test_template_generators.py \
-          openmmforcefields/tests/test_system_generator.py
+          openmmforcefields/tests/test_system_generator.py \
+          -k "not TestEspalomaTemplateGenerator"
       env:
         COV_ARGS: --cov=openmmforcefields --cov-config=setup.cfg --cov-append --cov-report=xml
         LOGLEVEL: "INFO"
@@ -106,7 +96,6 @@ jobs:
       working-directory: ./charmm
 
     - name: Run docstrings
-      if: ${{ matrix.latest-openff-toolkit == true }}
       continue-on-error: True
       run: |
         pytest --doctest-modules openmmforcefields --ignore=openmmforcefields/tests
