--- a/devtools/conda-envs/test_env.yaml
+++ b/devtools/conda-envs/test_env.yaml
@@ -14,17 +14,17 @@ dependencies:
     # Testing
   - pytest
   - pytest-cov
-  - codecov
+  - pytest-xdist
+  - pytest-randomly
 
     # Requirements for converted force field installer
   - openmm >=7.6.0
 
-  - openff-units >=0.1.8
-  - openff-amber-ff-ports >=0.0.3
+  - openff-toolkit >=0.11
 
     # Requirements for conversion tools
   - pyyaml
-  - ambertools >=18.0 # contains sufficiently recent ParmEd
+  - ambertools =22
   - lxml
   - networkx
 
@@ -41,6 +41,6 @@ dependencies:
     # TODO: Rework this once espaloma is on conda-forge
     #
   - pytorch >=1.8.0
-  - dgl
+  - dgl <1
   - qcportal >=0.15.0
   - espaloma
