Use latest Espaloma 0.3.x by default

--- a/devtools/conda-envs/test_env.yaml
+++ b/devtools/conda-envs/test_env.yaml
@@ -37,6 +37,5 @@ dependencies:
 
     #
     # Espaloma requirements below
-    # TODO: Rework this once espaloma is on conda-forge
     #
-  - espaloma
+  - espaloma >=0.3.1
