Skip problematic test that caused error due to invalid SMIRNOFF parameters

--- a/devtools/conda-envs/test_env.yaml
+++ b/devtools/conda-envs/test_env.yaml
@@ -22,7 +22,7 @@ dependencies:
 
     # Requirements for conversion tools
   - pyyaml
-  - ambertools =22
+  - ambertools <23
   - lxml
   - networkx
 
