Add uniform, automated linting

--- a/setup.cfg
+++ b/setup.cfg
@@ -1,22 +1,17 @@
-# Helper file to handle all configs
-
 [coverage:run]
-# .coveragerc to control coverage.py and pytest-cov
 omit =
-    # Omit the tests
     */tests/*
-    # Omit generated versioneer
     openmmforcefields/_version.py
 
-[yapf]
-# YAPF, in .style.yapf files this shows up as "[style]" header
-COLUMN_LIMIT = 119
-INDENT_WIDTH = 4
-USE_TABS = False
+[isort]
+profile=black
 
 [flake8]
-# Flake8, PyFlakes, etc
 max-line-length = 119
+ignore = E203,E501,W605,W503
+per-file-ignores =
+    openmmforcefields/__init__.py:F401
+    openmmforcefields/generators/__init__.py:F401
 
 [versioneer]
 # Automatic version numbering scheme
